--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,50 @@
-fastapi
-uvicorn
-python-dotenv
-pydantic
-pillow
-aiofiles
-aiohttp
-motor
-pymongo
-apscheduler
-pyjwt
-bson
+aiofiles==24.1.0
+aiohappyeyeballs==2.6.1
+aiohttp==3.11.18
+aiosignal==1.3.2
+annotated-types==0.7.0
+anyio==4.9.0
+APScheduler==3.11.0
+async-timeout==5.0.1
+attrs==25.3.0
+bcrypt==4.3.0
+certifi==2025.4.26
+cffi==1.17.1
+charset-normalizer==3.4.2
+click==8.1.8
+colorama==0.4.6
+cryptography==45.0.3
+dnspython==2.7.0
+dotenv==0.9.9
+email_validator==2.2.0
+exceptiongroup==1.3.0
+fastapi==0.115.12
+frozenlist==1.6.0
+h11==0.16.0
+httpcore==1.0.9
+httpx==0.28.1
+idna==3.10
+jwt==1.3.1
+motor==3.7.1
+multidict==6.4.4
+numpy==2.0.2
+passlib==1.7.4
+pillow==11.2.1
+propcache==0.3.1
+pycparser==2.22
+pydantic==2.11.5
+pydantic_core==2.33.2
+PyJWT==2.10.1
+pymongo==4.13.0
+python-dotenv==1.1.0
+python-multipart==0.0.20
+requests==2.32.4
+sniffio==1.3.1
+starlette==0.46.2
+typing-inspection==0.4.1
+typing_extensions==4.13.2
+tzdata==2025.2
+tzlocal==5.3.1
+urllib3==2.4.0
+uvicorn==0.34.2
+yarl==1.20.0
