--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,157 +1,71 @@
-accelerate==1.7.0
-altair==5.5.0
-annotated-types==0.7.0
-anyio==4.9.0
-asgiref==3.8.1
-async-timeout==4.0.3
-attrs==25.3.0
-backoff==2.2.1
-bcrypt==4.3.0
-blinker==1.9.0
-build==1.2.2.post1
-cachetools==5.5.2
-certifi==2025.4.26
-charset-normalizer==3.4.2
-chromadb==1.0.10
-click==8.2.1
-colorama==0.4.6
-coloredlogs==15.0.1
-Deprecated==1.2.18
-distro==1.9.0
-dnspython==2.7.0
-durationpy==0.10
-easyocr==1.7.1
-exceptiongroup==1.3.0
-faiss-cpu==1.11.0
-fastapi==0.115.9
-filelock==3.13.1
-flatbuffers==25.2.10
-fsspec==2024.6.1
-gitdb==4.0.12
-GitPython==3.1.44
-google-auth==2.40.2
-googleapis-common-protos==1.70.0
-greenlet==3.2.2
-grpcio==1.71.0
-h11==0.16.0
-httpcore==1.0.9
-httptools==0.6.4
-httpx==0.28.1
-huggingface-hub==0.32.0
-humanfriendly==10.0
-idna==3.10
-imageio==2.37.0
-importlib_metadata==8.6.1
-importlib_resources==6.5.2
-Jinja2==3.1.4
-jiter==0.10.0
-joblib==1.5.1
-jsonpatch==1.33
-jsonpointer==3.0.0
-jsonschema==4.23.0
-jsonschema-specifications==2025.4.1
-kubernetes==32.0.1
-langchain==0.3.25
-langchain-core==0.3.61
-langchain-text-splitters==0.3.8
-langsmith==0.3.42
-lazy_loader==0.4
-markdown-it-py==3.0.0
-MarkupSafe==2.1.5
-mdurl==0.1.2
-mmh3==5.1.0
-mpmath==1.3.0
-narwhals==1.40.0
-networkx==3.3
-ninja==1.11.1.4
-numpy==2.1.2
-oauthlib==3.2.2
-onnxruntime==1.22.0
-openai==1.82.0
-opencv-python==4.10.0.84
-opencv-python-headless==4.11.0.86
-opentelemetry-api==1.33.1
-opentelemetry-exporter-otlp-proto-common==1.33.1
-opentelemetry-exporter-otlp-proto-grpc==1.33.1
-opentelemetry-instrumentation==0.54b1
-opentelemetry-instrumentation-asgi==0.54b1
-opentelemetry-instrumentation-fastapi==0.54b1
-opentelemetry-proto==1.33.1
-opentelemetry-sdk==1.33.1
-opentelemetry-semantic-conventions==0.54b1
-opentelemetry-util-http==0.54b1
-orjson==3.10.18
-overrides==7.7.0
-packaging==24.2
-pandas==2.2.3
-pdf2image==1.17.0
-pillow==10.4.0
-posthog==4.2.0
-protobuf==5.29.4
-psutil==7.0.0
-pyarrow==20.0.0
-pyasn1==0.6.1
-pyasn1_modules==0.4.2
-pyclipper==1.3.0.post6
-pydantic==2.11.5
-pydantic_core==2.33.2
-pydeck==0.9.1
-Pygments==2.19.1
-pymongo==4.13.0
-PyMuPDF==1.26.0
-pypdf==5.5.0
+# =================================================
+# INSTALLATION ORDER IS CRITICAL - FOLLOW SEQUENCE
+# =================================================
+
+# STEP 1: Install PyTorch with CUDA 11.8 FIRST
+# ⚠️ IMPORTANT: Do NOT install torch via pip! Use conda command:
+# conda install pytorch torchvision torchaudio pytorch-cuda=11.8 -c pytorch -c nvidia
+#
+# This requirements.txt excludes torch packages because they MUST be installed via conda
+# for proper CUDA 11.8 integration. pip installation of torch often causes CUDA issues.
+#
+# If conda is absolutely not available, use this pip command as last resort:
+# pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118
+
+# STEP 2: Core dependencies (install these after PyTorch)
+numpy==1.24.3
+pandas==2.0.3
+scikit-learn==1.3.2
+
+# STEP 3: Core Framework
+fastapi==0.104.1
+uvicorn[standard]==0.24.0
+streamlit==1.28.1
+
+# STEP 4: AI & ML (install after PyTorch and numpy)
+openai==1.3.6
+sentence-transformers==2.2.2
+
+# STEP 5: Database & Storage
+pymongo==4.6.0
+chromadb==0.4.18
+
+# STEP 6: Image Processing (install after PyTorch)
+opencv-python==4.8.1.78
+Pillow==10.1.0
+easyocr==1.7.0
+
+# STEP 7: PDF Processing
+PyMuPDF==1.23.8
 PyPDF2==3.0.1
-PyPika==0.48.9
-pyproject_hooks==1.2.0
-pyreadline3==3.5.4
-pytesseract==0.3.13
-python-bidi==0.6.6
-python-dateutil==2.9.0.post0
-python-dotenv==1.1.0
-pytz==2025.2
-PyYAML==6.0.2
-referencing==0.36.2
-regex==2024.11.6
-requests==2.32.3
-requests-oauthlib==2.0.0
-requests-toolbelt==1.0.0
-rich==13.9.4
-rpds-py==0.25.1
-rsa==4.9.1
-safetensors==0.5.3
-scikit-image==0.25.2
-scikit-learn==1.6.1
-scipy==1.15.3
-sentence-transformers==4.1.0
-shapely==2.1.1
-shellingham==1.5.4
-six==1.17.0
-smmap==5.0.2
-sniffio==1.3.1
-SQLAlchemy==2.0.41
-starlette==0.45.3
-streamlit==1.39.0
-sympy==1.13.3
-tenacity==9.1.2
-threadpoolctl==3.6.0
-tifffile==2025.5.10
-tokenizers==0.21.1
-toml==0.10.2
-tomli==2.2.1
-tornado==6.5.1
-tqdm==4.67.1
-transformers==4.52.3
-typer==0.16.0
-typing-inspection==0.4.1
-typing_extensions==4.12.2
-tzdata==2025.2
-urllib3==2.4.0
-uvicorn==0.34.2
-watchdog==5.0.3
-watchfiles==1.0.5
-websocket-client==1.8.0
-websockets==15.0.1
-wrapt==1.17.2
-zipp==3.22.0
-zstandard==0.23.0
-python-multipart==0.0.9
+pytesseract==0.3.10
+
+# STEP 8: Web & HTTP
+requests==2.31.0
+aiofiles==23.2.1
+
+# STEP 9: Utilities
+python-dotenv==1.0.0
+pydantic==2.5.0
+python-multipart==0.0.6
+pytz==2023.3
+
+# STEP 10: Development & Testing
+pytest==7.4.3
+pytest-asyncio==0.21.1
+
+# =================================================
+# SYSTEM DEPENDENCIES (install separately)
+# =================================================
+# tesseract-ocr (system package)
+# poppler-utils (system package)
+# CUDA 11.8 (for GPU acceleration)
+
+# =================================================
+# IMPORTANT NOTES:
+# =================================================
+# 1. PyTorch MUST be installed first with conda for CUDA support
+# 2. If conda is not available, use pip with CUDA index:
+#    pip install torch torchvision torchaudio --index-url https://download.pytorch.org/whl/cu118
+# 3. EasyOCR requires PyTorch to be installed first
+# 4. Some packages may need to be installed individually if conflicts occur
